--- a/index.html
+++ b/index.html
@@ -295,11 +295,11 @@
       <h1 class="section-title">Achievements</h1>
       <div class="tab-container">
           <input id="all-achievement" type="radio" name="all-achievement" checked />
-          <label class="tab" for="all-achievement" onclick="handleLabelClick('all', 0, 'achievement', 'achievement-card', 'achievement-type')">All<span class="notification">6</span></label>
+          <label class="tab" for="all-achievement" onclick="handleLabelClick('all', 0, 'achievement', 'achievement-card', 'achievement-type')">All<span class="notification">7</span></label>
           <input id="hackathon" type="radio" name="hackathon" />
           <label class="tab" for="hackathon" onclick="handleLabelClick('hackathon', 1, 'achievement', 'achievement-card', 'achievement-type')">Hackathon<span class="notification">4</span></label>
           <input id="competition" type="radio" name="competition" />
-          <label class="tab" for="competition" onclick="handleLabelClick('competition', 2, 'achievement', 'achievement-card', 'achievement-type')">Competition<span class="notification">1</span></label>
+          <label class="tab" for="competition" onclick="handleLabelClick('competition', 2, 'achievement', 'achievement-card', 'achievement-type')">Competition<span class="notification">2</span></label>
           <input id="award" type="radio" name="award" />
           <label class="tab" for="award" onclick="handleLabelClick('award', 3, 'achievement', 'achievement-card', 'achievement-type')">Award<span class="notification">1</span></label>
           <span class="glider"></span>
@@ -312,12 +312,15 @@
               <h2>Winner</h2>
               <h6>Competed 587 participants</h6>
               <p>Epidemiology Hackathon,Shaastra 2023, IIT Madras</p>
-              <a class="no-highlight" href="https://drive.google.com/file/d/1xQukJ2MlOMOUwoXvJO4vMs5JWf0l09mq/view?usp=drive_link" target="_blank">
-                <span class="certificate">
-                  <img class="certificate-icon" src="assests/certificate.png" alt="certificate">
-                  <p>Certificate</p>
-                </span>
-              </a>
+              <div class="achievement-highlight">
+                <span>Team: Individual</span>
+                <a class="no-highlight" href="https://drive.google.com/file/d/1xQukJ2MlOMOUwoXvJO4vMs5JWf0l09mq/view?usp=drive_link" target="_blank">
+                  <span class="certificate">
+                    <img class="certificate-icon" src="assests/certificate.png" alt="certificate">
+                    <p>Certificate</p>
+                  </span>
+                </a>
+              </div>
             </div>
             <div>
               <span class="achievement-type hackathon">Hackathon</span>
@@ -331,12 +334,15 @@
               <h2>Winner</h2>
               <h6>Competed 111 participants</h6>
               <p>Pragyan'23, JC Bose University, Haryana</p>
-              <a class="no-highlight" href="https://drive.google.com/file/d/1SiTW-66RJPvzDCY4cMyKHGmdfaWSa_ae/view?usp=sharing" target="_blank">
-                <span class="certificate">
-                  <img class="certificate-icon" src="assests/certificate.png" alt="certificate">
-                  <p>Certificate</p>
-                </span>
-              </a>
+              <div class="achievement-highlight">
+                <span>Team: 2 members</span>
+                <a class="no-highlight" href="https://drive.google.com/file/d/1SiTW-66RJPvzDCY4cMyKHGmdfaWSa_ae/view?usp=sharing" target="_blank">
+                  <span class="certificate">
+                    <img class="certificate-icon" src="assests/certificate.png" alt="certificate">
+                    <p>Certificate</p>
+                  </span>
+                </a>
+              </div>
             </div>
             <div>
               <span class="achievement-type hackathon">Hackathon</span>
@@ -350,12 +356,15 @@
               <h2>First Runner Up</h2>
               <h6>Competed 1,177 participants</h6>
               <p>Tech Savishkaar, Vasavi College of Engineering, Hyderabad</p>
-              <a class="no-highlight" href="https://drive.google.com/file/d/1KxT3g9uCUXRrQ1R2ryYsmjLFCNHq5lGR/view?usp=drive_link" target="_blank">
-                <span class="certificate">
-                  <img class="certificate-icon" src="assests/certificate.png" alt="certificate">
-                  <p>Certificate</p>
-                </span>
-              </a>
+              <div class="achievement-highlight">
+                <span>Team: Individual</span>
+                <a class="no-highlight" href="https://drive.google.com/file/d/1KxT3g9uCUXRrQ1R2ryYsmjLFCNHq5lGR/view?usp=drive_link" target="_blank">
+                  <span class="certificate">
+                    <img class="certificate-icon" src="assests/certificate.png" alt="certificate">
+                    <p>Certificate</p>
+                  </span>
+                </a>
+              </div>
             </div>
             <div>
               <span class="achievement-type hackathon">Hackathon</span>
@@ -369,12 +378,15 @@
               <h2>Second Runner Up</h2>
               <h6>Competed 835 participants</h6>
               <p>Hack-AI-Thon, Karpagam College of Engineering, Tamil Nadu</p>
-              <a class="no-highlight" href="https://drive.google.com/file/d/1PRs9mv66H1EEsOFxwfTPvr_mgZia21PU/view?usp=drive_link" target="_blank">
-                <span class="certificate">
-                  <img class="certificate-icon" src="assests/certificate.png" alt="certificate">
-                  <p>Certificate</p>
-                </span>
-              </a>
+              <div class="achievement-highlight">
+                <span>Team: Individual</span>
+                <a class="no-highlight" href="https://drive.google.com/file/d/1PRs9mv66H1EEsOFxwfTPvr_mgZia21PU/view?usp=drive_link" target="_blank">
+                  <span class="certificate">
+                    <img class="certificate-icon" src="assests/certificate.png" alt="certificate">
+                    <p>Certificate</p>
+                  </span>
+                </a>
+              </div>
             </div>
             <div>
               <span class="achievement-type hackathon">Hackathon</span>
@@ -388,12 +400,37 @@
               <h2>Second Runner Up</h2>
               <h6>Competed 179 participants</h6>
               <p>AI PromptThon 2.0, Texify Company</p>
-              <a class="no-highlight" href="https://drive.google.com/file/d/1fumJilyZjSazIk3QiXzHSdCe-X6JknsK/view?usp=drive_link" target="_blank">
-                <span class="certificate">
-                  <img class="certificate-icon" src="assests/certificate.png" alt="certificate">
-                  <p>Certificate</p>
-                </span>
-              </a>
+              <div class="achievement-highlight">
+                <span>Team: Individual</span>
+                <a class="no-highlight" href="https://drive.google.com/file/d/1fumJilyZjSazIk3QiXzHSdCe-X6JknsK/view?usp=drive_link" target="_blank">
+                  <span class="certificate">
+                    <img class="certificate-icon" src="assests/certificate.png" alt="certificate">
+                    <p>Certificate</p>
+                  </span>
+                </a>
+              </div>
+            </div>
+            <div>
+              <span class="achievement-type competition">Competition</span>
+            </div>
+          </div>
+        </div>
+        <div class="achievement-card">
+          <div class="achievement-desc">
+            <img src="assests/achievement-card-07.png" alt="achievement-icon">
+            <div class="achievement-desc-content">
+              <h2>Top Performer</h2>
+              <h6>Competed 591 participants</h6>
+              <p>MachineKnightSeason 02, TechBrain</p>
+              <div class="achievement-highlight ">
+                <span>Team: Individual</span>
+                <a class="no-highlight" href="https://drive.google.com/file/d/1whtRzq2QUuGeY7mX1IY4nH576xVaf4sl/view?usp=sharing" target="_blank">
+                  <span class="certificate">
+                    <img class="certificate-icon" src="assests/certificate.png" alt="certificate">
+                    <p>Certificate</p>
+                  </span>
+                </a>
+              </div>
             </div>
             <div>
               <span class="achievement-type competition">Competition</span>
@@ -527,8 +564,8 @@
               <p>Need population data for any Village, City, Town, District, State, Country or even Continent? Place-Population-Finder API delivers! Get instant, accurate figures with one simple call. Optimize resources, target markets, and make informed decisions.</p>
             </div>
             <a class="no-highlight" href="https://rapidapi.com/sanyamjain007/api/place-population-finder-api/" target="_blank">
-              <span class="certificate work-detail">
-                <img src="assests/RapidAPI.png" alt="certificate">
+              <span class="github-code-02 work-detail">
+                <img src="assests/RapidAPI.png" alt="work-destination">
                 <p>Rapid API</p>
               </span>
             </a>
@@ -542,8 +579,8 @@
               <p>A visually striking homepage harmonizing aesthetics and functionality. Engage effortlessly with an intuitive search bar, while dynamic text elements highlight book count, store statistics, and our growing community. Immerse users in a creative, user-friendly space that celebrates the essence of literature. Happy Design.</p>
             </div>
             <a class="no-highlight" href="https://www.figma.com/community/file/1330881641301452902/library-center-home-page" target="_blank">
-              <span class="certificate work-detail">
-                <img src="assests/Figma.png" alt="certificate">
+              <span class="github-code-02 work-detail">
+                <img src="assests/Figma.png" alt="work-destination">
                 <p>Figma</p>
               </span>
             </a>
@@ -557,8 +594,8 @@
               <p>Discover the epitome of car booking elegance with our captivating UI. Seamlessly explore premium vehicles, check vital details like speed and auto-pilot, set your arrival date, and unveil competitive pricing. A perfect blend of aesthetics and functionality awaits you.</p>
             </div>
             <a class="no-highlight" href="https://www.figma.com/community/file/1330870654313039966/car-booking-home-page" target="_blank">
-              <span class="certificate work-detail">
-                <img src="assests/Figma.png" alt="certificate">
+              <span class="github-code-02 work-detail">
+                <img src="assests/Figma.png" alt="work-destination">
                 <p>Figma</p>
               </span>
             </a>
@@ -572,8 +609,8 @@
               <p>Feeling down? Uplifted? Stuck? Find the perfect quote for every mood with the Mood Based Quote API. Unlock a world of wisdom and elevate your apps and platforms with the power of quotes.</p>
             </div>
             <a class="no-highlight" href="https://rapidapi.com/sanyamjain007/api/mood-based-quote-api/" target="_blank">
-              <span class="certificate work-detail">
-                <img src="assests/RapidAPI.png" alt="certificate">
+              <span class="github-code-02 work-detail">
+                <img src="assests/RapidAPI.png" alt="work-destination">
                 <p>Rapid API</p>
               </span>
             </a>
@@ -587,8 +624,8 @@
               <p>Want to know whose birthdays were on a specific day? You are at right place. This API will find popular and important people whose birthdays are on the given date.</p>
             </div>
             <a class="no-highlight" href="https://rapidapi.com/sanyamjain007/api/whose-birthday-finder-api/" target="_blank">
-              <span class="certificate work-detail">
-                <img src="assests/RapidAPI.png" alt="certificate">
+              <span class="github-code-02 work-detail">
+                <img src="assests/RapidAPI.png" alt="work-destination">
                 <p>Rapid API</p>
               </span>
             </a>
@@ -602,8 +639,8 @@
               <p>Want to know what’s special on the specific date? Send a request here and get details of all selective, events, births, holidays, and even deaths.</p>
             </div>
             <a class="no-highlight" href="https://rapidapi.com/sanyamjain007/api/day-special-finder-api/" target="_blank">
-              <span class="certificate work-detail">
-                <img src="assests/RapidAPI.png" alt="certificate">
+              <span class="github-code-02 work-detail">
+                <img src="assests/RapidAPI.png" alt="work-destination">
                 <p>Rapid API</p>
               </span>
             </a>
@@ -617,8 +654,8 @@
               <p>The Period Rashifal API provides accurate and personalized horoscope predictions for all twelve Rashis, covering yesterday, today, and tomorrow, as well as weekly, monthly, and yearly forecasts.</p>
             </div>
             <a class="no-highlight" href="https://rapidapi.com/sanyamjain007/api/period-rashifal-api/" target="_blank">
-              <span class="certificate work-detail">
-                <img src="assests/RapidAPI.png" alt="certificate">
+              <span class="github-code-02 work-detail">
+                <img src="assests/RapidAPI.png" alt="work-destination">
                 <p>Rapid API</p>
               </span>
             </a>
@@ -632,8 +669,8 @@
               <p>The Daily Rashifal API offers current Vedic astrology horoscope predictions for all twelve Rashis (Aries, Taurus, Gemini, Cancer, Leo, Virgo, Libra, Scorpio, Sagittarius, Capricorn, Aquarius, and Pisces).</p>
             </div>
             <a class="no-highlight" href="https://rapidapi.com/sanyamjain007/api/daily-rashifal-api/" target="_blank">
-              <span class="certificate work-detail">
-                <img src="assests/RapidAPI.png" alt="certificate">
+              <span class="github-code-02 work-detail">
+                <img src="assests/RapidAPI.png" alt="work-destination">
                 <p>Rapid API</p>
               </span>
             </a>
@@ -647,8 +684,8 @@
               <p>Redesign Cleveland city website with new colors and illustrations. A website design incorporating live press meets, recent events, upcoming events, full-listed contact details, and a place to explore many beautiful places of Cleveland.</p>
             </div>
             <a class="no-highlight" href="https://www.figma.com/community/file/1249991871020587984/cleveland-website-redesign" target="_blank">
-              <span class="certificate work-detail">
-                <img src="assests/Figma.png" alt="certificate">
+              <span class="github-code-02 work-detail">
+                <img src="assests/Figma.png" alt="work-destination">
                 <p>Figma</p>
               </span>
             </a>
@@ -662,8 +699,8 @@
               <p>Redesign of Foundit website with new illustrations and colorful color palette. A web design with all features of current website and also with more minor interactions for users. Complete prototype of Desktop view and design of Mobile view.</p>
             </div>
             <a class="no-highlight" href="https://www.figma.com/community/file/1249994527731921876/foundit-redesign-mobile-desktop-view" target="_blank">
-              <span class="certificate work-detail">
-                <img src="assests/Figma.png" alt="certificate">
+              <span class="github-code-02 work-detail">
+                <img src="assests/Figma.png" alt="work-destination">
                 <p>Figma</p>
               </span>
             </a>
