--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
           <a class="no-highlight" href="https://github.com/Sanyam-jain30" target="_blank">
             <img class="profile-icon" src="assests/GitHub.png" alt="github" />
           </a>
+          <a class="no-highlight" href="https://scholar.google.com/citations?user=L_WPs-cAAAAJ&hl=en" target="_blank">
+            <img class="profile-icon" src="assests/Googlescholar.png" alt="googlescholar" />
+          </a>
           <a class="no-highlight" href="https://www.figma.com/@sanyamjain_30" target="_blank">
             <img class="profile-icon" src="assests/Figma.png" alt="web" />
           </a>
@@ -556,6 +559,36 @@
       <div class="center-gradient"></div>
       <h1 class="section-title">Works</h1>
       <div class="work-cards">
+        <div class="work-card">
+          <img class="work-img" src="assests/topic-based-books-finder-api-high-resolution-logo.png">
+          <div class="work-desc">
+            <h2>Topic Based Books Finder API</h2>
+            <div class="work-desc-content">
+              <p>Introducing Topic Based Books Finder API – the ultimate tool for book enthusiasts. Simply input any topic, whether it's 'happy,' 'magic,' or anything else, and instantly discover a curated list of books along with their authors. Get insightful reviews to help you make the perfect choice for your next read.</p>
+            </div>
+            <a class="no-highlight" href="https://rapidapi.com/sanyamjain007/api/topic-based-books-finder-api/" target="_blank">
+              <span class="github-code-02 work-detail">
+                <img src="assests/RapidAPI.png" alt="work-destination">
+                <p>Rapid API</p>
+              </span>
+            </a>
+          </div>
+        </div>
+        <div class="work-card">
+          <img class="design-image" src="assests/space-site.png">
+          <div class="work-desc">
+            <h2>Space Site</h2>
+            <div class="work-desc-content">
+              <p>A space site design with varity of slots to display upcoming or past missions. Make the design more creative with beautiful rocket package and a wild information area on your only "space site".</p>
+            </div>
+            <a class="no-highlight" href="https://www.figma.com/community/file/1341434532245918356/space-site" target="_blank">
+              <span class="github-code-02 work-detail">
+                <img src="assests/Figma.png" alt="work-destination">
+                <p>Figma</p>
+              </span>
+            </a>
+          </div>
+        </div>
         <div class="work-card">
           <img class="work-img" src="assests/place-population-finder-api.png">
           <div class="work-desc">
