--- a/index.html
+++ b/index.html
@@ -301,13 +301,13 @@
       <h1 class="section-title">Achievements</h1>
       <div class="tab-container">
           <input id="all-achievement" type="radio" name="all-achievement" checked />
-          <label class="tab" for="all-achievement" onclick="handleLabelClick('all', 0, 'achievement', 'achievement-card', 'achievement-type')">All<span class="notification">7</span></label>
+          <label class="tab" for="all-achievement" onclick="handleLabelClick('all', 0, 'achievement', 'achievement-card', 'achievement-type')">All<span class="notification">11</span></label>
           <input id="hackathon" type="radio" name="hackathon" />
-          <label class="tab" for="hackathon" onclick="handleLabelClick('hackathon', 1, 'achievement', 'achievement-card', 'achievement-type')">Hackathon<span class="notification">4</span></label>
-          <input id="competition" type="radio" name="competition" />
-          <label class="tab" for="competition" onclick="handleLabelClick('competition', 2, 'achievement', 'achievement-card', 'achievement-type')">Competition<span class="notification">2</span></label>
+          <label class="tab" for="hackathon" onclick="handleLabelClick('competition', 1, 'achievement', 'achievement-card', 'achievement-type')">Competition<span class="notification">6</span></label>
           <input id="award" type="radio" name="award" />
-          <label class="tab" for="award" onclick="handleLabelClick('award', 3, 'achievement', 'achievement-card', 'achievement-type')">Award<span class="notification">1</span></label>
+          <label class="tab" for="award" onclick="handleLabelClick('award', 2, 'achievement', 'achievement-card', 'achievement-type')">Award<span class="notification">1</span></label>
+          <input id="others" type="radio" name="others" />
+          <label class="tab" for="others" onclick="handleLabelClick('others', 3, 'achievement', 'achievement-card', 'achievement-type')">Others<span class="notification">4</span></label>
           <span class="glider"></span>
       </div>
       <div class="achievement-cards">
@@ -329,7 +329,7 @@
               </div>
             </div>
             <div>
-              <span class="achievement-type hackathon">Hackathon</span>
+              <span class="achievement-type competition">Hackathon</span>
             </div>
           </div>
         </div>
@@ -351,7 +351,27 @@
               </div>
             </div>
             <div>
-              <span class="achievement-type hackathon">Hackathon</span>
+              <span class="achievement-type competition">Hackathon</span>
+            </div>
+          </div>
+        </div>
+        <div class="achievement-card">
+          <div class="achievement-desc">
+            <img src="assests/achievement-card-08.png" alt="achievement-icon">
+            <div class="achievement-desc-content">
+              <h2>Elite Score</h2>
+              <p>Forest and their Management - NPTEL Course</p>
+              <div class="achievement-highlight">
+                <a class="no-highlight" href="https://drive.google.com/file/d/1GgrW_gDr3NHNKC8oeqpBDZ2aA_oQz9D8/view?usp=sharing" target="_blank">
+                  <span class="certificate">
+                    <img class="certificate-icon" src="assests/certificate.png" alt="certificate">
+                    <p>Certificate</p>
+                  </span>
+                </a>
+              </div>
+            </div>
+            <div>
+              <span class="achievement-type others">Course</span>
             </div>
           </div>
         </div>
@@ -373,7 +393,27 @@
               </div>
             </div>
             <div>
-              <span class="achievement-type hackathon">Hackathon</span>
+              <span class="achievement-type competition">Hackathon</span>
+            </div>
+          </div>
+        </div>
+        <div class="achievement-card">
+          <div class="achievement-desc">
+            <img src="assests/achievement-card-11.png" alt="achievement-icon">
+            <div class="achievement-desc-content">
+              <h2>IBM Professional Excellence</h2>
+              <p>Getting Started with Enterprise-grade AI</p>
+              <div class="achievement-highlight">
+                <a class="no-highlight" href="https://drive.google.com/file/d/1eD8_p5R0b0hZKBmrTcsXTUoXMs2OeY68/view?usp=sharing" target="_blank">
+                  <span class="certificate">
+                    <img class="certificate-icon" src="assests/certificate.png" alt="certificate">
+                    <p>Certificate</p>
+                  </span>
+                </a>
+              </div>
+            </div>
+            <div>
+              <span class="achievement-type others">Certification</span>
             </div>
           </div>
         </div>
@@ -395,7 +435,7 @@
               </div>
             </div>
             <div>
-              <span class="achievement-type hackathon">Hackathon</span>
+              <span class="achievement-type competition">Hackathon</span>
             </div>
           </div>
         </div>
@@ -445,6 +485,26 @@
         </div>
         <div class="achievement-card">
           <div class="achievement-desc">
+            <img src="assests/achievement-card-10.png" alt="achievement-icon">
+            <div class="achievement-desc-content">
+              <h2>Microsoft Certified</h2>
+              <p>Security, Compliance, and Identity Fundamentals</p>
+              <div class="achievement-highlight">
+                <a class="no-highlight" href="https://drive.google.com/file/d/1fdOhoxfQWUODdyi2KW-X8dEz7W1ObLJy/view?usp=sharing" target="_blank">
+                  <span class="certificate">
+                    <img class="certificate-icon" src="assests/certificate.png" alt="certificate">
+                    <p>Certificate</p>
+                  </span>
+                </a>
+              </div>
+            </div>
+            <div>
+              <span class="achievement-type others">Certification</span>
+            </div>
+          </div>
+        </div>
+        <div class="achievement-card">
+          <div class="achievement-desc">
             <img src="assests/achievement-card-06.png" alt="achievement-icon">
             <div class="achievement-desc-content">
               <h2>Silver medal and Achievement Certificate</h2>
@@ -461,9 +521,26 @@
             </div>
           </div>
         </div>
-        <!-- <div class="more">
-          <span class="project-highlight">+2 more</span>
-        </div> -->
+        <div class="achievement-card">
+          <div class="achievement-desc">
+            <img src="assests/achievement-card-09.png" alt="achievement-icon">
+            <div class="achievement-desc-content">
+              <h2>Poster Participation</h2>
+              <p>Virtual Poster Exhibition - VIT</p>
+              <div class="achievement-highlight">
+                <a class="no-highlight" href="https://drive.google.com/file/d/11HcMRV0CtP3vnSfKwVAKKJpmKsovRtzV/view?usp=sharing" target="_blank">
+                  <span class="certificate">
+                    <img class="certificate-icon" src="assests/certificate.png" alt="certificate">
+                    <p>Certificate</p>
+                  </span>
+                </a>
+              </div>
+            </div>
+            <div>
+              <span class="achievement-type others">Participation</span>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
     <div id="project">
